docs/src/styles/custom.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --sl-color-accent-low: hsl(var(secondary));
  --sl-color-accent: hsl(var(--border));
  --sl-color-accent-high: 214.3 31.8% 91.4%;
  --sl-color-white: #ffffff;
  --sl-color-gray-1: #e1f1f6;
  --sl-color-gray-2: #b2c6cb;
  --sl-color-gray-3: #6b939d;
  --sl-color-gray-4: #385f68;
  --sl-color-gray-5: #173e47;
  --sl-color-gray-6: #022c35;
  --sl-color-black: #0b1b1f;
  --sl-color-text-accent: hsl(217.2, 91.2%, 59.8%);
  /* --sl-color-hairline-light: hsl(var(--secondary)); */

  --sl-color-bg-sidebar: #020817;
  --sl-color-bg: #020817;

  --background: 222.2, 84%, 4.9%;
  --foreground: 210, 40%, 98%;

  --primary: 217.2, 91.2%, 59.8%;
  --primary-foreground: 222.2, 47.4%, 11.2%;

  --border: 214.3 31.8% 91.4%;

  --warning-foreground: 48 97% 77%;

  --tip: 272 72% 47%;
  --tip-foreground: 264 67% 35%;
}

:root[data-theme='light'] {
  --sl-color-accent-low: #fec7c7;
  --sl-color-accent: #c90036;
  --sl-color-accent-high: #630317;
  --sl-color-white: #0b1b1f;
  --sl-color-gray-1: #022c35;
  --sl-color-gray-2: #173e47;
  --sl-color-gray-3: #385f68;
  --sl-color-gray-4: #6b939d;
  --sl-color-gray-5: #b2c6cb;
  --sl-color-gray-6: #e1f1f6;
  --sl-color-gray-7: #f0f8fa;
  --sl-color-black: #ffffff;

  --sl-color-hairline-light: hsl(var(--secondary));

  --sl-color-text-accent: hsl(221.2 83.2% 53.3%);

  --background: 0, 0%, 100%;
  --foreground: 222.2, 84%, 4.9%;
  --muted-foreground: 215.4 16.3% 46.9%;

  --primary: 221.2 83.2% 53.3%;
  --primary-foreground: 210 40% 98%;

  --border: 214.3, 31.8%, 91.4%;

  --sl-color-bg-sidebar: var(--background);
  --sl-color-hairline-shade: var(--border);

  --warning: 42 100% 62%;
  /* --warning-foreground: 48 97% 77%; */
  --warning-foreground: 38 92% 50%;

  /* --note-foreground: 210 100% 72%; */
  --note-foreground: 207 100% 23%;
  --note: 207 100% 23%;

  --tip: 272 72% 47%;
  /* --tip-foreground: 264 67% 35%; */
}

/* BADGE STYLES */

.sl-badge.danger {
  @apply inline-flex items-center gap-x-1.5 rounded-md px-1.5 py-0.5 text-sm/5 font-medium sm:text-xs/5 forced-colors:outline bg-red-500/15 text-red-700 group-data-[hover]:bg-red-500/25 dark:bg-red-500/20 dark:text-red-400 dark:group-data-[hover]:bg-red-500/20 border-none;
}

.sl-badge.caution {
  @apply inline-flex items-center gap-x-1.5 rounded-md px-1.5 py-0.5 text-sm/5 font-medium sm:text-xs/5 forced-colors:outline bg-amber-400/20 text-amber-700 group-data-[hover]:bg-amber-400/30 dark:bg-amber-400/25 dark:text-amber-400 dark:group-data-[hover]:bg-amber-400/15 border-none;
}

.sl-badge.tip {
  @apply inline-flex items-center gap-x-1.5 rounded-md px-1.5 py-0.5 text-sm/5 font-medium sm:text-xs/5 forced-colors:outline bg-purple-500/20 text-purple-700 group-data-[hover]:bg-purple-500/25 dark:text-purple-400 dark:group-data-[hover]:bg-purple-500/20 border-none;
}

.sl-badge.success {
  @apply inline-flex items-center gap-x-1.5 rounded-md px-1.5 py-0.5 text-sm/5 font-medium sm:text-xs/5 forced-colors:outline bg-green-500/15 text-green-700 group-data-[hover]:bg-green-500/25 dark:bg-green-500/20 dark:text-green-400 dark:group-data-[hover]:bg-green-500/20 border-none;
}

.sl-badge.note {
  @apply inline-flex items-center gap-x-1.5 rounded-md px-1.5 py-0.5 text-sm/5 font-medium sm:text-xs/5 forced-colors:outline bg-blue-500/20 text-blue-700 group-data-[hover]:bg-blue-500/25 dark:text-blue-400 dark:group-data-[hover]:bg-blue-500/25 border-none;
}

@media (min-width: 50rem) {
  button[data-open-modal] {
    @apply flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-sm shadow-sm transition-colors file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 hover:border-input hover:text-muted-foreground;
  }
}

/* HERO STYLES */


.hero {
  @apply flex flex-col gap-8;
}

.hero > img {
  @apply mx-0 w-3/4 mt-10 lg:mt-0;
}

/* CARD STYLES */

.card-grid {
  @apply grid gap-4 md:grid-cols-2;
}

@screen md {
  .stagger {
    @apply pb-20;
  }
  .stagger > *:nth-child(2n) {
    @apply translate-y-20;
  }
}

.card {
  @apply bg-background border flex flex-col rounded-lg px-6 py-5;
}

.card .title {
  @apply flex flex-col justify-start text-left align-text-top gap-[2px] text-foreground font-bold;
}

a > .card {
  @apply hover:border-primary;
}

.card .icon {
  @apply border-none bg-transparent text-primary !important;
}

.card .body {
  @apply text-muted-foreground mt-0;
}

/* SIDEBAR STYLES */

summary {
  display: flex !important;
}

div.sidebar-pane summary + ul > li {
  border-inline-start-color: hsl(var(--border));
}

div.sidebar-pane a[aria-current='page'] {
  @apply bg-primary/10 text-primary;
}

div.sidebar-pane a:hover {
  @apply bg-primary/10 text-primary;
}

div.sidebar-pane
  ul
  ul
  li:has(> a:not([aria-current='page']):is(:hover, :focus-visible)) {
  border-inline-start-color: hsl(var(--primary));
}

div.sidebar-pane a[aria-current='page'] {
  font-weight: 400;
}

div.sidebar-pane ul ul li:has(> a[aria-current='page']) {
  border-inline-start-color: hsl(var(--primary));
}

.sidebar-pane {
  @apply border-r-border !important;
}

li {
  @apply py-[2px];
}

/* PAGINATION LINK STYLES */

.pagination-links {
  @apply flex flex-row sm:flex-row justify-between items-center gap-4;
}

.pagination-links a {
  @apply border-none shadow-none
}

.pagination-links svg {
  @apply size-5 text-muted-foreground;
}

.link-title {
  @apply text-[hsl(var(--muted-foreground))] hover:underline;
}

.link-title {
  @apply text-base transition-colors duration-100;
}

.pagination-links span {
  font-size: 0;
}

.pagination-links span br,
.pagination-links span span {
  font-size: initial;
}


/* MAIN CONTENT STYLES */

.content-panel.astro-7nkwcw3z {
  @apply border-none px-3 lg:px-6 pt-0;
}

.astro-j6tvhyss {
  @apply hidden;
}
/* ... */

